# fastapi-microservice-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: code_checks.yaml  unit_tests.yaml
myservice/: config.py  logger.py  main.py
myservice/routers/: __init__.py  common.py
myservice/schemas/: common.py
myservice/utils/: exceptions.py  helpers.py  middlewares.py
tests/routers/: test_common.py
tests/utils/: test_helpers.py
