[tool.poetry]
name = "myservice"  # TODO: Update the name of the service
version = "0.1.0"
description = "Describe the purpose of this service here."  # TODO: Update the description of the service
authors = ["Vatsal Gotawala <vatsalgotawala@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
